feat: add room queue
